[package]
name = "social-cards"
version = "0.1.0"
authors = ["Steve Manuel <nilslice@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.7"
serde_json = "1.0.67"
serde = { version = "1.0.130", features = ["derive"] }
imageproc = "0.22.0"
image = { version = "0.23.14", default-features = false, features = ["png"] }
rusttype = "0.9.2"
textwrap = "0.14.2"
percent-encoding = "2.1.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
